templates/ingress_metrics.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: eq3-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /user01eq10/metrics(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: metrics-service
              port:
                number: 3000
